--- a/anoymous/backend/src/main/resources/application.properties
+++ b/anoymous/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # MySQL ?????? ?? ??
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/anoymus?useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.username=
+spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
