--- a/anoymous2/backend/build.gradle
+++ b/anoymous2/backend/build.gradle
@@ -6,7 +6,10 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-description = 'Demo project for Spring Boot'
+
+repositories {
+	mavenCentral()
+}
 
 java {
 	toolchain {
@@ -20,26 +23,21 @@ configurations {
 	}
 }
 
-repositories {
-	mavenCentral()
-}
-
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'  // 추가
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-java:8.1.0'  // 수정 버전 명시
+
+	runtimeOnly 'com.mysql:mysql-connector-j:8.0.33'  // 명확한 MySQL 드라이버 버전 지정
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
-	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-	//testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	//testImplementation 'org.springframework.security:spring-security-test'
-	// JWT 필요 시 (선택)
-	// implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	// runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	// runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.named('test') {
