--- a/anoymous3/backend/build.gradle
+++ b/anoymous3/backend/build.gradle
@@ -43,6 +43,10 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.jsoup:jsoup:1.17.2'
+	implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
+
 }
 
 tasks.named('test') { useJUnitPlatform() }
