--- a/anoymous3/frontend/package.json
+++ b/anoymous3/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "dompurify": "^3.2.6",
+    "marked": "^16.2.1",
     "vue": "^3.5.18",
     "vue-router": "^4.4.5",
     "vuex": "^4.1.0"
